# TATTVA

./: .gitignore  README.md  Tattva_Master_Build_Spec.md  Tattva_Spec.md  docker-compose.yml  firebase-applet-config.json  index.html  metadata.json  package-lock.json  package.json  server.ts
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/db/: __init__.py  base.py  models.py  session.py  vector_utils.py
backend/app/services/: __init__.py
backend/app/services/classification/: __init__.py  router.py  service.py
backend/app/services/generation/: __init__.py  diff.py  flashcard_service.py  router.py  service.py  validator.py
backend/app/services/ingestion/: __init__.py  router.py  service.py
backend/app/services/knowledge_store/: __init__.py  coverage_service.py  formula_service.py  router.py  (+3 more)
backend/tests/: conftest.py  test_classifier.py  test_classifier_properties.py  test_coverage.py  test_diff.py  test_diff_properties.py  test_flashcard_properties.py  test_flashcards.py  test_formula_scanner.py  test_generation.py  test_generation_properties.py  test_ingestion.py  test_ingestion_properties.py  test_integration.py  test_knowledge_store.py  test_knowledge_store_properties.py  test_mock_paper.py  test_mock_paper_properties.py  test_parser.py  test_parser_properties.py  test_pyq_analyzer.py  test_pyq_properties.py  test_round_trip.py  test_smoke.py  test_validator.py  test_validator_properties.py
(+49 files in other folders)
