[tool.poetry]
name = "tattva-exam-engine"
version = "0.1.0"
description = "AI-powered exam preparation platform — grounded note generation from lecture PDFs"
authors = ["Tattva Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pgvector = "^0.3.0"
google-generativeai = "^0.7.0"
PyMuPDF = "^1.24.0"
pytesseract = "^0.3.10"
tiktoken = "^0.7.0"
nltk = "^3.8.1"
Pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
hypothesis = "^6.103.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
